--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "weather_cli"
+name = "forecaster"
 version = "0.1.0"
 edition = "2021"
-
+description="A simple weather forecaster that takes all the data from https://openweathermap.org/ and displays it in a nice way."
+license="MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
