--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ reqwest = { version = "0.11.22", features = ["json", "blocking"] }
 tokio = { version = "1.34.0", features = ["full"] }
 directories = "5.0.1"
 toml = "0.8.8"
+async-trait = "0.1.74"
+url = "2.5.0"
